# Semantische-NoHouse-Architektur

./: .gitattributes  .gitignore  COPYRIGHT.md  LICENSE.md  README.md  project.plan.md  pyproject.toml
.github/workflows/: schema-lint.yml
LICENSES/: LicenseRef-SinnZeit-1.0.txt
dotfs/: ram-logging.md
prinzipien-lizenzen-richtlinien/: main.sha256  werteanspruch-beNetX-DotMesh-Architektur-v1.0.md
semantik/: beNetX-Forschungs-Dokumentation  echo-resonanz-manifest.md
src/benetx_public/: __init__.py
system/: dot-system.md  hybriddocsystem-konzeption.md  naming-conventions.md  project-structure.md
